namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-service-nodejs
  labels:
    name: api-service-nodejs
