deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service-nodejs
  namespace: api-service-nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-service-nodejs
  template:
    metadata:
      labels:
        app: api-service-nodejs
    spec:
      containers:
        - name: api-service-nodejs
          image: image-registry.openshift-image-registry.svc:5000/api-service-nodejs/api-service-nodejs:latest
          ports:
            - containerPort: 8081
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
