service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service-nodejs
  namespace: api-service-nodejs
spec:
  selector:
    app: api-service-nodejs
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      name: http
